# DofScraper3

./: README.md  encyclopedie.json  pyproject.toml  requirements.txt  result.json
dofscraper/: __init__.py  __init__.py.bak
dofscraper/classes/: colors.py  downloader.py  menus.py  webscraper.py
env/: pyvenv.cfg
webscrapper/: __init__.py
