[tool.poetry]
name = "webscrapper"
version = "0.1.0"
description = ""
authors = ["2ELCN0168 <lcn.en.perso@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
requests = "^2.32.3"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
